MDEV-18778: mysql_tzinfo_to_sql does not work correctly in MariaDB Galera

Problem is that wsrep_replicate_myisam is experimental and does not
work always but DDL e.g. truncate table is replicated. Thus,
mysql_tzinfo_to_sql that uses truncate table will truncate time zone
info from other nodes. Therefore, you can't set time zone info
node by node.

Fix introduces a option skip-write-binlog to mysql_tzinfo_to_sql
that will disable replication of time zone table changes to other nodes
in a cluster. Thus, user can set time zone info to Galera cluster
node by node.