sql/tztime.cc
@@ -2607,7 +2607,7 @@ scan_tz_dir(char * name_end, uint symlink_recursion_level, uint verbose)
 }
 
 
-my_bool opt_leap, opt_verbose;
+my_bool opt_leap, opt_verbose, opt_skip_write_binlog;
 
 static const char *load_default_groups[]=
 { "mysql_tzinfo_to_sql", 0};
@@ -2629,6 +2629,8 @@ static struct my_option my_long_options[] =
    &opt_verbose, &opt_verbose, 0, GET_BOOL, NO_ARG, 0, 0, 0, 0, 0, 0},
   {"version", 'V', "Output version information and exit.",
    0, 0, 0, GET_NO_ARG, NO_ARG, 0, 0, 0, 0, 0, 0},
+  {"skip-write-binlog", 'S', "Do not replicate changes to time zone tables to other nodes in a Galera cluster",
+   &opt_skip_write_binlog,&opt_skip_write_binlog, 0, GET_BOOL, NO_ARG, 0, 0, 0, 0, 0, 0},
   { 0, 0, 0, 0, 0, 0, GET_NO_ARG, NO_ARG, 0, 0, 0, 0, 0, 0}
 };
 
@@ -2697,9 +2699,17 @@ main(int argc, char **argv)
     return 1;
   }
 
-  // Replicate MyISAM DDL for this session, cf. lp:1161432
-  // timezone info unfixable in XtraDB Cluster
-  printf("set @prep=if((select count(*) from information_schema.global_variables where variable_name='wsrep_on'), 'SET GLOBAL wsrep_replicate_myisam=?', 'do ?');\n"
+  if (opt_skip_write_binlog)
+    /* If skip_write_binlog is set and wsrep is compiled in we disable
+       sql_log_bin and wsrep_on to avoid Galera replicating below
+       truncate table clauses. This will allow user to set different
+       time zones to nodes in Galera cluster. */
+    printf("set @prep1=if((select count(*) from information_schema.global_variables where variable_name='wsrep_on'), 'SET SESSION SQL_LOG_BIN=?, WSREP_ON=OFF;', 'do ?');\n"
+          "prepare set_wsrep_write_binlog from @prep1;\n"
+	  "set @toggle=1; execute set_wsrep_write_binlog using @toggle;\n");
+  else
+    // Replicate MyISAM DDL for this session, cf. lp:1161432
+    printf("set @prep=if((select count(*) from information_schema.global_variables where variable_name='wsrep_on'), 'SET GLOBAL wsrep_replicate_myisam=?', 'do ?');\n"
          "prepare set_wsrep_myisam from @prep;\n"
          "set @toggle=1; execute set_wsrep_myisam using @toggle;\n");
 
@@ -2751,7 +2761,8 @@ main(int argc, char **argv)
   }
 
   // Reset wsrep_replicate_myisam. lp:1161432
-  printf("set @toggle=0; execute set_wsrep_myisam using @toggle;\n");
+  if (!opt_skip_write_binlog)
+    printf("set @toggle=0; execute set_wsrep_myisam using @toggle;\n");
 
   free_defaults(default_argv);
   my_end(0);
